z-index fix

--- a/OpenCase_Beta2/css/profile.css
+++ b/OpenCase_Beta2/css/profile.css
@@ -298,6 +298,7 @@ ul.posts__user-posts {
     margin-top: 20px;
     overflow: hidden;
     border-radius: 2px;
+        z-index: 50;
 }
 
 #close-trade-window {
